# testmateai-be

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  backend-api-specification.md  mockdata.json  pyproject.toml  task.md
alembic/: alembic_helpers.py  env.py
alembic/versions/: 002bc59d212b_add_preferences_to_user_model.py  6a226f8e9313_first_migration.py  70bd23d881e3_.py  7b1c2a3add10_add_otp_table.py  957392d84f53_.py  a10640ec76d6_.py  af8e8e810d54_.py
app/: __init__.py
app/api/: route.py  routes.py
app/api/ai/: api.py
app/api/auth/: api.py
app/api/dashboard/: api.py
app/api/mock_test/: api.py
app/api/practice/: api.py
app/api/tests/: api.py
app/api/user/: api.py  apis.py
app/api/vocabulary/: api.py
app/common/exceptions/: common.py  db_session.py
app/common/utils/: cache.py  dashboard.py  email.py  level.py  llm.py  mock_test.py  practice.py  user_activity.py  user_analytics.py  version.py  vocabulary.py
app/core/: config.py
app/core/depends/: get_current_user.py  get_session.py
app/crud/: auth.py  dashboard.py  mock_test.py  practice.py  user.py  user_activity.py  user_analytics.py  user_progress.py  vocabulary.py
app/model/: model.py
app/schema/: ai.py  auth.py  dashboard.py  mock_test.py  practice.py  tests.py  user.py  user_activity.py  user_analytics.py  user_progress.py  vocabulary.py
app/setup/: database.py  middleware.py
docker/dev/: Dockerfile  compose.yaml
docker/prod/: Dockerfile
